fixed visibility of remove file link

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -358,7 +358,7 @@ p {
     mask-size: 18px 18px;
   }
 
-  a {
+  a:not(.hidden) {
     display: inline-block;
     margin: -2px;
     padding: 2px;
